# pico-6502

./: 6502.c  6502_test.h  6502emu.c  6522.h  65C02_test.h  CMakeLists.txt  LICENSE  README.md  fake6502.txt  forth.h  hw_config.c  krusader.h  test.h  wozmon.h
vasm/: Listing.txt  Requires_ram.txt  a.mon  a.out  bin_to_mon.sh  compile.sh  helloworld.s  load.sh
vasm/DIRLIST/: Listing.txt  a.mon  a.out  bin_to_mon.sh  dirlist.s  don_fir_list.mon  hwconfig.s  libfat32.s  liblcd.s
vasm/LCD/: Listing.txt  a.mon  a.out  bin_to_mon.sh  lcd.s
vasm/LCD/lcd_clear/: Listing.txt  a.out  bin_to_mon.sh  clear_lcd.s  don_clear_lcd.mon
